Made the side menu collapseable, removed jumping margins and made colors correct.

--- a/wiki/assets/scss/ecadwiki/_specs.scss
+++ b/wiki/assets/scss/ecadwiki/_specs.scss
@@ -107,7 +107,7 @@
   background-color: transparent;
 }
 
-.specs-sidebar .specs-toc-item.active a,
+.specs-sidebar .specs-toc-item.active>a,
 .specs-sidebar .nav>.active:hover>a,
 .specs-sidebar .nav>.active>a {
   font-weight: bold;
@@ -166,7 +166,6 @@
 }
 
 /* Docs TOC item links. */
-
 .specs-toc-link {
   display: block;
   padding: .25rem 1.5rem;
@@ -177,14 +176,6 @@
 .specs-toc-link:hover {
   color: rgba(0, 0, 0, .85);
   text-decoration: none;
-}
-
-.specs-toc-item.active {
-  margin-bottom: 1rem;
-}
-
-.specs-toc-item.active:not(:first-child) {
-  margin-top: 1rem;
 }
 
 .specs-toc-item.active>.specs-toc-link {
